[package]
name = "swo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oas3 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = "4"
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.4.8", features = ["derive"] }
