[package]
name = "s2o"
version = "0.4.0"
edition = "2021"
description="A command line tool to convert swagger (OpenAPI) v2 to OpenAI code format"
readme="README.md"
license = "MIT"
homepage="https://github.com/0xksure/api-pilot"
repository="https://github.com/0xksure/api-pilot"
documentation="https://github.com/0xksure/api-pilot/blob/main/README.md"
keywords=["cli","OpenAPI","OpenAI","ChatGPT"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oas3 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = "4"
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.4.8", features = ["derive"] }
sha256 = "1.4.0"
